--- a/JavaScript/基础知识点.md
+++ b/JavaScript/基础知识点.md
@@ -75,7 +75,14 @@ JavaScript中Number.MAX_SAFE_INTEGER表示最大安全数字，计算结果是90
 
 **转Boolean**：在条件判断时，除了 `undefined`， `null`， `false`， `NaN`， `''`， `0`， `-0`，其他所有值都转为 `true`，包括所有对象。
 
-**"=="**:
+**"=="**运算符:
+
+当两个操作数的类型不相同时
+
+- 如果一个值是null，另一个值是undefined，则它们相等
+- 如果一个值是数字，另一个值是字符串，先将字符串转换为数学，然后使用转换后的值进行比较。
+- 如果其中一个值是true，则将其转换为1再进行比较。如果其中的一个值是false，则将其转换为0再进行比较。
+- 如果一个值是对象，另一个值是数字或字符串，则将对象转换为原始值，再进行比较。
 
 这里有三道题：
 
