--- a/浏览器原理/浏览器.md
+++ b/浏览器原理/浏览器.md
@@ -849,6 +849,10 @@ module.exports = {
 #### JSONP
 
 **原理**：利用`<script>`标签没有跨域限制，通过`<script>`标签src属性，发送带有callback参数的GET请求，其中callback函数的参数用来接收后端传来的数据。在后端启动一个server服务，将要传的数据以定义好了的回调函数名加上返回结果的方式传给前端。
+	
+**缺点**：具有局限性， 仅支持get方法；不安全，可能会遭受XSS攻击。
+	
+为什么JSONP只支持GET方法？当解析到script标签时，浏览器知道这里需要一个js文件，于是再发起一个请求去拿这个js文件，这个请求只能用GET方法，不可能是POST，就好像在浏览器地址栏输入地址后回车一样。
 
 ```javascript
 <!--原生实现-->
@@ -871,7 +875,6 @@ this.$http.jsonp('http://www.domain2.com:8080/login', {
 })
 ```
 
-**缺点**：具有局限性， 仅支持get方法；不安全，可能会遭受XSS攻击。
 
 #### postMessage跨域
 
