--- a/JavaScript/手写实现及概念原理.md
+++ b/JavaScript/手写实现及概念原理.md
@@ -41,7 +41,7 @@ p.__proto__.constructor // Person
 Person.prototype.constructor  // Person
 ```
 
-![image-20220303161336181](https://gitee.com/jolinfor/picture-bed/raw/master/img/image-20220303161336181.png)
+![image-20220303161336181](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261622203.png)
 
 需要注意的地方：
 
@@ -133,7 +133,9 @@ JS引擎并非一行一行地分析和执行程序，而是一段一段地分析
 1. 当调用函数时，在还没执行里面代码前，即创建阶段，执行上下文会创建**变量对象**，**作用域链**和决定this值
 2. 进入执行阶段，会顺序执行函数中每一行代码，进行变量赋值、函数引用等动作
 
-![image-20220304153134341](https://gitee.com/jolinfor/picture-bed/raw/master/img/image-20220304153134341.png)
+![image-20220304153134341](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261623280.png)
+
+
 
 ### 变量对象
 
@@ -600,7 +602,7 @@ foo('name', 'age', 'sex')
 
 打印结果：
 
-![image-20220305150515582](https://gitee.com/jolinfor/picture-bed/raw/master/img/image-20220305150515582.png)
+![image-20220305150515582](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261623638.png)
 
 **length属性**：表示函数`实参`的个数，而不是形参，传了多少就是多少。
 
