--- a/数据结构与算法/数据结构.md
+++ b/数据结构与算法/数据结构.md
@@ -18,7 +18,7 @@
        - initialValue：可选初始值
      - 求一个数组中数字累加和时使用reduce()而不用forEach()，优势在于reduce()有返回值，这样就不需要事先定义一个变量并更改它的值，而是直接接收reduce()最终返回的值。
 
-   <img src="https://gitee.com/jolinfor/picture-bed/raw/master/img/image-20220223114349539.png" alt="image-20220223114349539"  />
+   ![image-20220223114349539](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261619170.png)
 
 2. 栈
 
