--- a/CSS/概念、原理.md
+++ b/CSS/概念、原理.md
@@ -16,7 +16,7 @@ height: auto
 
 ## CSS权重
 
-![image-20220225210023698](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261621135.png)
+![image-20220225210023698](https://s2.loli.net/2022/03/27/6Kv8PnuQdjZIpcO.png)
 
 小栗子：
 
@@ -35,7 +35,7 @@ body#god span#test {width: 250px;}
 
 ## css盒子模型
 
-![image-20220116131603013](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261621387.png)
+![image-20220116131603013](https://s2.loli.net/2022/03/27/q9PNIw7GAMl2W1u.png)
 
 盒子模型由`Content + Padding + Border + Margin`组成。盒模型分为**W3C标准盒模型**和**IE盒模型**两种：
 
@@ -63,7 +63,7 @@ margin
     - right负值就是以元素本身border的右边为参考线
     - bottom负值就是以元素本身border的下边为参考线（下面元素的位置上移）
 
-    ![image-20220226154228004](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261621915.png)
+    ![image-20220226154228004](https://s2.loli.net/2022/03/27/MG7uaWtE2e6i4om.png)
 
     总地来说，就是当margin-top、left为负值的时候与参考线的距离减少，当margin-right、bottom为负值的时候参考线就向左、上面移动。
 
