--- a/数据结构与算法/算法.md
+++ b/数据结构与算法/算法.md
@@ -1,14 +1,8 @@
 算法就是解决问题的办法/步骤逻辑。
 
-**大O表示法**：
-
-![image-20220309091100874](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261629984.png)
-
-![image-20220309091258492](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261629859.png)
-
 ## 排序算法
 
-![cde64bf682850738153e6c76dd3f6fb32201ce3c73c23415451da1eead9eb7cb-20190624173156](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261629109.jpg)
+![cde64bf682850738153e6c76dd3f6fb32201ce3c73c23415451da1eead9eb7cb-20190624173156](https://s2.loli.net/2022/03/27/64pUV9RWarzNwDZ.png)
 
 1. 冒泡排序
 
@@ -38,7 +32,7 @@
 
         - heapify：找出当前节点及其子节点中的最大值，如果大于当前节点的值，则将其与最大值交换，保证父节点的值比子节点的值。因为交换了节点，也可能对下面子树产生影响（比如交换下来的那个数是子树中最小的），这个时候就要**使用递归对下面的子树再heapify一次**！！
 
-          ![image-20220226100605495](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261630215.png)
+          ![image-20220226100605495](https://s2.loli.net/2022/03/27/nJiAuNPs3dzmYk2.png)
 
      2. 将堆首和队尾交换，并把堆的尺寸缩小1，调整堆
 
@@ -123,14 +117,14 @@ console.log(arr);
        - 如果是对数组做归并排序，则空间复杂度为`O(n)`，因为需要新开辟数组存放中间结果O(n)+递归函数调用O(logn)；
        - 如果是链表，则为`O(logn)`，因为链表可以通过修改引用来更改节点顺序，无需开辟额外空间，只需要递归调用的O(logn)
 
-       ![image-20220309101245227](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261620089.png)
+       ![image-20220309101245227](https://s2.loli.net/2022/03/27/lU4WCxtaGQ61FjY.png)
 
    - **自下而上的迭代**：
 
      - 对于非递归的归并排序，需要使用迭代的方法替换cut环节
      - 时间复杂度：`O(nlogn)`，空间复杂度：如果是数组，则为`O(n)`；如果是链表，则为`O(1)`。
 
-     ![c1d5347aa56648afdec22372ee0ed13cf4c25347bd2bb9727b09327ce04360c2-Picture1](https://raw.githubusercontent.com/Wine-doubao/figure-bed/main/img/202203261620075.png)
+     ![c1d5347aa56648afdec22372ee0ed13cf4c25347bd2bb9727b09327ce04360c2-Picture1](https://s2.loli.net/2022/03/27/Z9XmlhpvQrdIxOR.png)
 
    ```javascript
    // 自上而下的递归
