--- a/CSS/基本布局.md
+++ b/CSS/基本布局.md
@@ -94,6 +94,8 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
 
 ## 水平垂直居中
 
+> 其中top、left、right、bottom和margin使用百分比作为值的时候，都是以包含块的宽度为准。
+
 1. absolute + margin:auto
 
    - 设置绝对定位，且当水平方向(left/right)或垂直方向(top/bottom)的两个定位属性同时存在的时候，绝对元素在该方向上便具有了流体特性(自动填充)，这样宽高固定时，设置 margin:auto; 则 margin 平分剩余空间导致垂直水平居中，适合盒子有宽高的情况
@@ -207,6 +209,15 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
    }
    ```
 
+### 总结
+
+1. 父盒子flex，设置justify-content、align-items
+2. 父盒子grid，设置justify-self、align-self
+3. 父盒子flex或grid，子盒子margin：auto
+4. 子盒子设置绝对定位，left:50%、top:50% + transform的translate()
+5. 子盒子设置绝对定位，同时left、right、top、bottom四个属性，margin:auto
+5. 子盒子设置绝对定位，left:50%、top:50% + margin负值
+
 ## 两栏布局
 
 两栏布局一般指的是**左边一栏宽度固定，右边一栏宽度自适应**。
@@ -302,7 +313,7 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
 
 4. flex
 
-   - 右侧滚动时，左侧也会跟着滚动，因为左侧和右侧高度一样，这是flex的特性
+   - 右侧滚动时，左侧也会跟着滚动，因为左侧和右侧高度一样，这是flex的特性（设置grid也一样）
 
    ```html
    <style>
@@ -310,7 +321,7 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
        display: flex;
      }
      .aside {
-       flex: 25vw;
+       width: 25vw;
      }
      .main {
        flex: 1;
@@ -323,152 +334,45 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
    </body>
    ```
 
+### 总结
+
+1. `float+margin-left`：右盒子高度超出100vh，滚动时左盒子会跟着滚动；
+2. `float+overflow:auto`：设置高度为100vh，左盒子固定，不随右盒子滚动；
+3. `absolute`：父元素相对定位，右盒子绝对定位；
+4. `absolute+margin-left`：父盒子相对定位，左盒子绝对定位，右盒子设置margin-left；
+5. `flex`：父元素设为flex，左盒子固定宽度，右盒子flex为1；
+6. `grid`：父元素设为grid，及**grid-template-columns: 固定宽度 auto**。
+
 ## 三栏布局
 
 三栏布局一般指**左右两栏宽度固定，中间自适应**的布局。
 
-1. 圣杯布局
-
-   - 利用浮动和负边距来实现。父级元素设置左右的 padding，**三列均设置向左浮动，中间一列放在最前面**，宽度设置为父级元素的宽度，因此后面两列都被挤到了下一行，通过设置 margin 负值将其移动到上一行，再利用相对定位，定位到两边。
-   - 特点：三列浮动，中间列放前面；父元素设置padding；左右列设置margin负值+position定位
-
-   ```html
-   <!DOCTYPE html>
-   <html>
-     <head>
-       <meta charset="utf-8" />
-       <title>实现三栏水平布局之圣杯布局</title>
-       <style type="text/css">
-         /*基本样式*/
-         .left, .right, .main {
-           min-height: 300px;
-         }
-         .left {
-           width: 200px;
-           background-color:thistle;
-         }
-         .main {
-           background-color: #999;
-         }
-         .right {
-           width: 300px;
-           background-color: violet;
-         }
-         /* 圣杯布局关键代码 */
-         .left, .main, .right {
-           float: left;
-           position: relative;
-         }
-         .main {
-           width: 100%;
-         }
-         .container {
-           padding-left: 200px;
-           padding-right: 300px;
-         }
-         .left {
-           margin-left: -100%;
-           left: -200px;
-         }
-         .right {
-           margin-left: -300px;
-           right: -300px;
-         }
-       </style>
-     </head>
-     <body>
-       <div class="container">
-         <div class="main">main</div>
-         <div class="left">left</div>
-         <div class="right">right</div>
-       </div>
-     </body>
-   </html>
-   ```
-
-2. 双飞翼布局
-
-   - 双飞翼布局相对于圣杯布局来说，左右位置的保留是通过中间列的 margin 值来实现的，而不是通过父元素的 padding 来实现的。本质上来说，也是通过浮动和外边距负值来实现的。
-   - 因为使用的是中间列margin，则中间列的内容需要另外嵌套一层放内容，父元素设width:100%，子元素设margin-left和margin-right
-   - 特点：三列浮动，中间列放前面；中间列margin；左右列margin负值
-
-   ```html
-   <!DOCTYPE html>
-   <html lang="en">
-     <head>
-       <meta charset="UTF-8" />
-       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-       <title>双飞翼布局</title>
-       <style>
-         .left,
-         .right,
-         .main {
-           min-height: 200px;
-         }
-         .left {
-           width: 200px;
-           background-color: thistle;
-         }
-         .main {
-           background: #999;
-         }
-         .right {
-           width: 300px;
-           background-color: violet;
-         }
-         /* 双飞翼布局重点 */
-         .left,
-         .main,
-         .right {
-           float: left;
-         }
-         .main {
-           width: 100%;
-         }
-         .main-inner {
-           margin-left: 200px;
-           margin-right: 300px;
-         }
-         .left {
-           margin-left: -100%;
-         }
-         .right {
-           margin-left: -300px;
-         }
-       </style>
-     </head>
-     <body>
-       <div class="main"><div class="main-inner">中心区</div></div>
-       <div class="left">left</div>
-       <div class="right">right</div>
-     </body>
-   </html>
-   ```
-
-3. flex布局
+1. flex布局
 
    - 左右两栏设置固定大小，中间一栏flex:1
-
+   
    ```html
    <style>
-   	.left {
-           width: 30vw;
-       }
-       .main {
-           flex: 1;
-       }
-       .right {
-           width: 20vw;
-       }
+     body {
+       display: flex;
+     }
+     .left {
+       width: 30vw;
+     }
+     .main {
+       flex: 1;
+     }
+     .right {
+       width: 20vw;
+     }
    </style>
    <body>
-       <div class="left"></div>
-       <div class="main"></div>
-       <div class="right"></div>
+     <div class="left"></div>
+     <div class="main"></div>
+     <div class="right"></div>
    </body>
    ```
-
+   
 4. 绝对定位
 
    - 左右两栏绝对定位，中间设置margin
@@ -549,10 +453,146 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
      <div class="right">right</div>
    </div>
    ```
+   
+4. 圣杯布局
+
+   - 利用浮动和负边距来实现。父级元素设置左右的 padding，**三列均设置向左浮动，中间一列放在最前面**，宽度设置为父级元素宽度的100%，因此后面两列都被挤到了下一行，通过设置 margin 负值将其移动到上一行，再利用相对定位，定位到两边。
+
+   - 注意事项：
+
+     1. 三列浮动，中间列放前面(宽度设为100%)，此时左右列被挤到下一行
+
+     2. 父元素设置padding为左右列空出位置；
+
+     3. 左盒子设置margin-left为-100%，挤到上一行（达到以下效果），再使用相对定位，设置负的left达到目的；
+
+        ![](https://s2.loli.net/2022/04/06/nBg4a7bNcvmXjFs.png)
+
+     4. 右盒子设置margin-left为负的自身宽度，这样就可以挤到上一行，再使用相对定位，设置负的right即可达到目的。
+
+   ```html
+   <!DOCTYPE html>
+   <html lang="en">
+     <head>
+       <meta charset="UTF-8" />
+       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+       <title></title>
+       <style>
+         body {
+           margin: 0;
+           padding: 0 30vw 0 20vw;
+         }
+         div{
+           float: left;
+         }
+         #main {
+           width: 100%;
+           height: 100vh;
+           background-color: goldenrod;
+         }
+         #left {
+           width: 20vw;
+           height: 100vh;
+           background-color: pink;
+           position: relative;
+           margin-left: -100%;
+           left: -20vw;
+         }
+         #right {
+           width: 30vw;
+           height: 100vh;
+           background-color: skyblue;
+           position: relative;
+           right: -30vw;
+           margin-left: -30vw;
+         }
+       </style>
+     </head>
+     <body>
+       <div id="main"></div>
+       <div id="left"></div>
+       <div id="right"></div>
+     </body>
+   </html>
+   
+   ```
+
+5. 双飞翼布局
+
+   - 双飞翼布局相对于圣杯布局来说，左右位置的保留是通过中间列的 margin 值来实现的，而不是通过父元素的 padding 来实现的。本质上来说，也是通过浮动和外边距负值来实现的。
+   - 因为使用的是中间列margin，则中间列的内容需要另外嵌套一层放内容，中间列设width:100%，中间列的子盒子设margin-left和margin-right
+   - 特点：三列浮动，中间列放前面；中间列margin；左右列margin负值定位到目的位置
+
+   ```html
+   <!DOCTYPE html>
+   <html lang="en">
+     <head>
+       <meta charset="UTF-8" />
+       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+       <title>双飞翼布局</title>
+       <style>
+         .left,
+         .right,
+         .main {
+           min-height: 200px;
+         }
+         .left {
+           width: 200px;
+           background-color: thistle;
+         }
+         .main {
+           background: #999;
+         }
+         .right {
+           width: 300px;
+           background-color: violet;
+         }
+         /* 双飞翼布局重点 */
+         .left,
+         .main,
+         .right {
+           float: left;
+         }
+         .main {
+           width: 100%;
+         }
+         .main-inner {
+           margin-left: 200px;
+           margin-right: 300px;
+         }
+         .left {
+           margin-left: -100%;
+         }
+         .right {
+           margin-left: -300px;
+         }
+       </style>
+     </head>
+     <body>
+       <div class="main"><div class="main-inner">中心区</div></div>
+       <div class="left">left</div>
+       <div class="right">right</div>
+     </body>
+   </html>
+   ```
+
+### 总结
+
+1. `flex`：左右宽度固定，中间一栏flex设为1
+2. `grid`：设置三个列宽，中间为auto
+3. `absolute+margin`：父元素相对定位，左右盒子绝对定位，中间盒子设置margin
+4. `float+margin`：左右盒子设置float，中间盒子放最后，且设置margin
+5. `圣杯`：三列浮动，中间列放前面；父元素设置padding；左右列设置margin负值(挤到上一行)+相对定位(定位到目的位置)；
+6. `双飞翼`：三列浮动，中间列放前面且内容放在子盒子中；中间盒子宽度为100%，其子盒子设置左右margin；左右列通过margin-left负值定位
+
+**注**：为什么不使用float+overflow，通过BFC不与浮动元素重叠的特性来实现三栏布局呢？设置overflow为auto，盒子本身的display还是为block，这样会导致右盒子在下一行向右浮动；而设置中间盒子display为inline-block，需要显式设置宽度为剩余宽度，不然就默认为子元素的宽度，不如float+margin方式的清爽。
 
 ### 圣杯布局与双飞翼布局比较
 
 1. 圣杯布局在DOM结构上显得更加直观和自然
 2. 双飞翼布局省去了很多css，而且由于不用使用定位，可以获得比圣杯布局更小最小宽度
+2. 圣杯使用padding+margin-left+relative；而双飞翼使用margin+margin-left即可
 
 注意：由于双飞翼布局会一直随着浏览器可视区域宽度减小从而不断挤压中间部分宽度。 所以需要设置给页面一个`min-width > LeftWidth + RightWidth`。
