--- a/JavaScript/手写实现及概念原理.md
+++ b/JavaScript/手写实现及概念原理.md
@@ -1,5 +1,11 @@
 ## 原型和原型链
 
+> - `prototype`：显式原型
+> - `__proto__`：隐式原型
+> - 原型链：__ proto__的路径
+>
+> 可参考[这可能是掘金讲「原型链」，讲的最好最通俗易懂的了，附练习题！](https://juejin.cn/post/7007416743215759373)
+
 每一个JavaScript对象(null除外)在创建的时候就会与之关联另一个对象，这个对象就是我们所说的**原型**，每一个对象都会以其原型为模板、从原型继承方法和属性。原型对象也可能拥有原型，并从中继承方法和属性，一层一层以此类推，这种关系常被称为**原型链**，原型链的尽头是`Object.prototype`。
 
 **prototype**：每个函数都有一个prototype属性，这个属性指向的是对象原型。
