--- a/计算机网络/计网知识点.md
+++ b/计算机网络/计网知识点.md
@@ -135,6 +135,8 @@ TCP有4种拥塞控制算法：
 
 #### 慢开始
 
+> 初始页面加载的14Kb规则，TCP慢开始就是第一个响应包为14Kb的原因，也是为什么web性能优化需要将此初始14Kb响应作为优化重点的原因。
+
 思路：开始的时候不要发送大量数据，而是先测试一下网络的拥塞程度，**在每收到一个新的分组确认就将cwnd加一**(初始cnwd为2~4个，旧版为1~2个)。
 
 注：为什么说每收到一个新分组的确认cwnd+1，但是上图是指数级增长的？其横坐标为`传输轮次`，就是把拥塞窗口所允许发送的报文段都连续发送出去，并收到了对已发送的最后一个字节的确认，即**一个传输轮次发送的是一个拥塞窗口的量**。
