--- a/CSS/概念、原理.md
+++ b/CSS/概念、原理.md
@@ -14,7 +14,31 @@ height: auto
 
 注：绝对定位元素百分比根据`padding box`计算，非绝对定位元素百分比是根据`content box`计算。
 
-## CSS权重
+## css选择器
+
+### 基本选择器
+
+1. 通用选择器：`*`
+2. 元素选择器：`h1`
+3. 类选择器：`.classname`
+4. ID选择器：`#idname`
+5. 属性选择器：
+   - `[attr]`：指定属性的元素
+   - `[attr=val]`：属性等于指定值的元素
+   - `[attr*=val]`：属性包含指定值的元素
+   - `[attr^=val]`：属性以指定值开头的元素
+   - `[attr$=val]`：属性以指定值结尾的元素
+   - `[attr~=val]`：属性包含指定值(该属性可以包含多个属性值，其中一个值为val)的元素(不推荐使用)；
+   - `[attr|=val]`：属性以“val-”开头的元素(不推荐使用)；
+
+### 组合选择器
+
+1. 相邻兄弟选择器：`A + B`
+2. 普通兄弟选择器：`A ~ B`
+3. 子选择器：`A > B`
+4. 后代选择器：`A B`
+
+## css权重
 
 ![image-20220225210023698](https://s2.loli.net/2022/03/27/6Kv8PnuQdjZIpcO.png)
 
