--- a/浏览器原理/浏览器.md
+++ b/浏览器原理/浏览器.md
@@ -223,9 +223,12 @@ self.addEventListener('fetch', e => {
 
 ## 浏览器渲染原理
 
+> - [MDN-关键渲染路径(CRP)](https://developer.mozilla.org/zh-CN/docs/Web/Performance/Critical_rendering_path)
+> - [浏览器的工作原理：新式网络浏览器幕后揭秘](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/)
+
 1. 浏览器先对得到的HTML进行解码，之后进行网络资源的预处理，将以后要发送的请求提前加进请求队列中。
 2. 浏览器将HTML转化为一个个的标记（标记化Tokenization），之后通过标记来构建DOM树；CSS同理，先进行标记化，再进行CSS样式树的构建。
-3. 浏览器将DOM树和CSS样式树结合，生成渲染树。渲染树的节点被称为渲染对象，渲染对象是一个包含有颜色和大小等属性的矩形，渲染对象和 DOM 元素相对应，但这种对应关系不是一对一的，不可见的 DOM 元素不会被插入渲染树。还有一些 DOM元素对应几个可见对象，它们一般是一些具有复杂结构的元素，无法用一个矩形来描述。
+3. 浏览器将DOM树和CSS样式树结合，生成渲染树。渲染树的节点被称为渲染对象，渲染对象是一个包含有颜色和大小等属性的矩形，渲染对象和 DOM 元素相对应，但这种对应关系不是一对一的，不可见的 DOM 元素不会被插入渲染树，换句话说**渲染树只包含了可见内容**（具有`visibility: hidden`的节点会出现在Render树上，因为它们会占用空间）。还有一些 DOM元素对应几个可见对象，它们一般是一些具有复杂结构的元素，无法用一个矩形来描述。
 4. 布局（回流/重排）：浏览器根据渲染树，获取每个渲染对象在屏幕上的位置和尺寸。
 5. 绘制：遍历渲染树并调用渲染对象的 paint 方法将计算好的像素点绘制到屏幕。
 6. 渲染层合成：多个绘制后的渲染层按照恰当的重叠顺序进行合并，而后生成位图，最终通过显卡展示到屏幕上。
