update mock interview

--- a/CSS/基本布局.md
+++ b/CSS/基本布局.md
@@ -215,8 +215,8 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
 2. 父盒子grid，设置justify-self、align-self
 3. 父盒子flex或grid，子盒子margin：auto
 4. 子盒子设置绝对定位，left:50%、top:50% + transform的translate()
-5. 子盒子设置绝对定位，同时left、right、top、bottom四个属性，margin:auto
-5. 子盒子设置绝对定位，left:50%、top:50% + margin负值
+5. 子盒子设置绝对定位，同时left、right、top、bottom四个属性，margin:auto（固定宽高）
+5. 子盒子设置绝对定位，left:50%、top:50% + margin负值（固定宽高）
 
 ## 两栏布局
 
