--- a/日志/202204.md
+++ b/日志/202204.md
@@ -1,3 +1,11 @@
+## 4.15
+
+上午十一点多收到学长的模拟面试消息，虽然前几天已经说过了，但还是有些秃然🥝。从收到消息的紧张 -> 慢慢接受等待到来 -> 要开始，紧张坏了 -> 自我抛弃，有啥说啥。虽然中间有几次卡壳🍇...学长很温柔耐心，nice🍱。
+
+感受最大的就是其实每一个问题对我来说都是开放题，问了解什么东西，讲一下，就一下子懵掉了，面经背多了，没有细节提醒都不知道从哪说起，要说些什么，逻辑思维还是很重要的，感觉我就属于催一下动一下的类型，惭愧🎃，就得主动说，多说点...
+
+二轮复习规划：就着知识点归纳出一套逻辑，问到的时候要怎么答；去尝试各种奇奇怪怪的API，用熟来，也不至于把hasOwnProperty写成其他的还一直套😬，手写题很多都是方法、API的重写，还有各种应用题+算法。
+
 ## 4.16
 
 上次写日志还是在去年，自己是最了解自己的，总得找点方法逼一逼自己，那就写日志每天update一下吧🤪。有些细小的收获凑一篇博客的子树是不够的，也就是心里的一点所想，又不想用又臭又长的无序列表来放在一个文件里，无头无脑，烦人的很，不如记录在每天的日志中，学习了什么，收获了什么，与日志最配的就是可爱的小表情啦😝
