--- a/日志/202204.md
+++ b/日志/202204.md
@@ -1,4 +1,8 @@
-## 4.15
+## 4.18
+
+今天干什么了...3道算法题看了一天😅，明天不好好学习就是小🐖。
+
+## 4.17
 
 上午十一点多收到学长的模拟面试消息，虽然前几天已经说过了，但还是有些秃然🥝。从收到消息的紧张 -> 慢慢接受等待到来 -> 要开始，紧张坏了 -> 自我抛弃，有啥说啥。虽然中间有几次卡壳🍇...学长很温柔耐心，nice🍱。
 
