--- a/日志/202204.md
+++ b/日志/202204.md
@@ -1,4 +1,14 @@
-## 4.15
+## 4.19
+
+看着昨天的日志，感觉一天过的好快，明天五点多就要爬起来做核酸，其实说不上开心不开心，明天早起希望能有精神写算法吧。
+
+今天写了两道差分数组的算法，这种技巧就是会者不难难者不会。下午去了个先进个人的表彰会，又是没有摸到鱼的一个下午。晚上看了flex和grid属性，sad，没记下来🤡，明天找空闲时间强化下记忆。
+
+## 4.18
+
+今天干什么了...3道算法题看了一天😅，明天不好好学习就是小🐖。
+
+## 4.17
 
 上午十一点多收到学长的模拟面试消息，虽然前几天已经说过了，但还是有些秃然🥝。从收到消息的紧张 -> 慢慢接受等待到来 -> 要开始，紧张坏了 -> 自我抛弃，有啥说啥。虽然中间有几次卡壳🍇...学长很温柔耐心，nice🍱。
 
