--- a/CSS/基本布局.md
+++ b/CSS/基本布局.md
@@ -24,73 +24,208 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
 
 ## flex布局
 
-详见[Flex 布局教程：语法篇](https://ruanyifeng.com/blog/2015/07/flex-grammar.html)
+> flexbox是一种一维的弹性布局模型。任何一个容器可以指定为flex布局（包括行内元素）。
+>
+> 注：设为flex布局后，子元素的`float`、`clear`和`vertical-align`属性将失效。
+>
+> 详见[Flex 布局教程：语法篇](https://ruanyifeng.com/blog/2015/07/flex-grammar.html)
+
+采用flex布局的元素简称为“**容器**”，容器的直系子元素就会变成“**flex元素**”。容器默认存在两根轴：主轴(main axis)和交叉轴(cross axis)。默认情况下，水平的为主轴，垂直的为交叉轴，**项目默认沿主轴排列**。其中，flex元素有以下行为：
+
+- 元素排列为一行（flex-direction属性的初始值是row），超出时会溢出容器而不会换行；
+- 元素从主轴的起始线开始；
+- 元素不会在主维度方向拉伸，但是可以缩小（空间不够被压缩）；
+- 元素被拉伸来填充交叉轴大小；
+- flex-basis: auto;
+- flex-wrap: nowrap;
+
+![img](https://www.ruanyifeng.com/blogimg/asset/2015/bg2015071004.png)
+
+### 容器的属性
+
+1. flex-direction：决定主轴的方向，其中row为横向，column为纵向；
+
+2. flex-wrap：定义一行排不下是否换行，nowrap|wrap|wrap-reverse；
+
+3. flex-flow：是flex-direction和flex-wrap的简写形式。
+
+4. justify-content：定义了flex元素在主轴上的对齐方式
+
+   - flex-start | flex-end | center | space-between | space-around
+
+   ![image-20220419204525616](https://s2.loli.net/2022/04/19/3oMJt4dpye9g8DN.png)
+
+5. align-items：定义flex元素在交叉轴上如何对齐
+
+   - flex-start | flex-end | center | baseline | stretch
+   - `baseline`：flex元素的第一行文字的基线对齐
+   - `stretch`：（默认值）如果flex元素未设置高度或设为auto，将占满整个容器的高度。
+
+6. align-content：定义了多根轴线的对齐方式，如果flex元素只有一根轴线（只有一行或一列），该属性不起作用。
+
+   <img src="https://s2.loli.net/2022/04/19/kQl3TCsygwo2b6Z.png" alt="img" style="zoom:50%;" />
+
+### flex元素的属性
+
+1. order：元素的排列顺序，数值越小，排列越靠前，默认值为0。
+2. flex-grow：定义项目的放大比例，`默认为0`，即**如果存在剩余空间，也不放大**。
+   - 如果所有项目的 flex-grow 属性都为1，则它们将等分剩余空间（如果有的话）。如果一个项目的 flex-grow 属性为2，其他项目都为1，则前者占据的剩余空间将比其他项多一倍。
+3. flex-shrink：定义了项目的缩小比例，`默认为1`，即如果空间不足，该项目将缩小。
+   - 如果所有项目的 flex-shrink 属性都为1，当空间不足时，都将等比例缩小。如果一个项目的 flex-shrink 属性为0，其他项目都为1，则空间不足时，前者不缩小。
+   - 负值对该属性无效。
+4. flex-basis：定义了在分配多余空间之前，元素占据的主轴空间。
+   - 浏览器根据这个属性，计算主轴是否有多余空间，它的默认值为`auto`，即元素的本来大小。
+   - 它可以设为跟 width或 height 属性一样的值（比如350px），则项目将占据固定空间。
+5. flex：是前三个属性的简写，默认值为`0 1 auto`，后两个属性可选。
+   - 属性快捷键：auto(1 1 auto) 和 none(0 0 auto)
+   - 建议优先使用这个属性，而不是单独写三个分离的属性，因为浏览器会推算相关值。
+6. align-self：可以定义单个元素与其他元素不同的对齐方式，可覆盖 align-items 属性，默认值为auto，表示继承父元素的 align-items 属性，如果没有父元素，则等同于 stretch 。
+   - auto | flex-start | flex-end | center | baseline | stretch
 
 **优点**：简单，灵活，对移动端友好
 
 **缺点**：兼容性不是很好，一些浏览器不支持
 
-```css
-.container{
-    height:200px;
-    width: 200px;
-    display: flex
-}
-.left{
-    background-color: red; 
-    flex: 1;
-}
-.middle{
-    background-color: yellow; 
-    flex: 1;    
-}
-.right{
-    background-color: green;
-    flex: 1;
-}
-```
-
-```html
-<div class="container">
-	<div class="left"></div>
-	<div class="middle"></div>
-	<div class="right"></div>
-</div>
-```
-
 ## grid布局
 
-详见[CSS Grid 网格布局教程](https://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html)
+> flex布局一次只能处理一个维度上的元素布局，一行或一列；grid布局是二维布局，将容器划分成立行和列，产生一个个的网格，我们可以将网格元素放在与这些行和列相关的位置上，从而达到布局的目的。
+>
+> Grid是最强大的css布局方案。设为网格布局后，容器子元素(项目)的`float`、`display：inline-block`、`display：table-cell`、`vertical-align`和`column-*`等设置都将失效。
+>
+> 详见[CSS Grid 网格布局教程](https://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html)
+
+采用grid布局的元素简称为“容器”，容器的直系子元素为“网格项目”。Gird会创建编号的网格线来让我们定位每一个网格元素。
+
+![image.png](https://s2.loli.net/2022/04/19/xuwsMRhtcYA6bQU.png)
+
+### 容器属性
+
+1. grid-template-columns | grid-template-rows
+
+   - 分别用于定义列宽和行高，可以使用绝对单位或百分比
+
+   - 如果有重复值可以使用`repeat(重复次数，重复值)`；
+
+   - `auto-fill`用于自动填充，使每一行或每一列容纳尽可能多的单元格，直到容器不能放置更多的列，如repeat(auto-fill, 100px)；
+
+   - `fr`关键字用于表示比例关系。
+
+   - `minmax(最小值，最大值)`用于表示长度在这个范围之内。
+
+   - `auto`关键字表示由浏览器自己决定长度。
+
+   - 这两个属性里，还可以使用方括号来指定每一根网格线的名字，方便以后的引用，且允许同一根线有多个名字。
+
+     ```css
+     .container {
+       display: grid;
+       grid-template-columns: [c1 othername] 100px [c2] 100px [c3] auto [c4];
+       grid-template-rows: [r1] 100px [r2] 100px [r3] auto [r4];
+     }
+     ```
+
+2. row-gap | column-gap | gap
+
+   - 前两个分别定义行与行的间距、列与列的间距，第三个是前两个的简写
+
+3. grid-template-areas：用于定义区域，一个区域由单个或多个单元格组成。
+
+   - 用同一个名字表示同一区域的
+
+   - 如果某些区域不需要利用，则使用"点"（`.`）表示。
+
+   - 注意，区域的命名会影响到网格线。每个区域的起始网格线，会自动命名为`区域名-start`，终止网格线自动命名为`区域名-end`。
+
+     ```css
+     grid-template-areas: "header header header"
+                          "main main sidebar"
+                          "footer footer footer";
+     ```
+
+4. grid-auto-flow：
+
+   - 默认值是`row`，表示划分网格后，容器的子元素会按“先行后列”的顺序放；
+   - 如果设成`column`，变成“先列后行”；
+   - 设为`row dense`，表示"先行后列"，并且尽可能紧密填满，尽量不出现空格。
+   - 设为`column dense`，表示"先列后行"，并且尽量填满空格。
+
+5. justify-items | align-items | place-items
+
+   - 前两个分别定义单元格内容的水平位置（左中右）、单元格内容的垂直位置（上中下），第三个是前两个的简写
+   - start | end | center | stretch
+
+6. justify-content | align-content | place-content
+
+   - 设置的是整个内容区域在容器里面的位置
+   - start | end | center | stretch | space-around | space-between | space-evenly
+   - `space-around`：项目之间的间隔比项目与容器边框的间隔大一倍
+   - `space-evenly`：项目与项目的间隔相等，项目与容器边框之间也是同样长度的间隔。
+
+7. grid-auto-columns | grid-auto-rows
+
+   - 有时候，一些项目的指定位置，在现有网格的外部。比如网格只有3列，但是某一个项目指定在第5行。这时，浏览器会自动生成多余的网格，以便放置项目。
+
+   - 这两个属性用于设置浏览器自动创建的多余网格的列宽和行高。如果不指定这两个属性，浏览器完全根据单元格内容的大小，决定新增网格的列宽和行高。
+
+     ```css
+     .container {
+       display: grid;
+       grid-template-columns: 100px 100px 100px;
+       grid-template-rows: 100px 100px 100px;
+       grid-auto-rows: 50px; 
+     }
+     ```
+
+     ![img](https://www.wangbase.com/blogimg/asset/201903/bg2019032525.png)
+
+8. grid-template | grid
+
+   - `grid-template`属性是`grid-template-columns`、`grid-template-rows`和`grid-template-areas`这三个属性的合并简写形式。
+   - `grid`属性是`grid-template-rows`、`grid-template-columns`、`grid-template-areas`、 `grid-auto-rows`、`grid-auto-columns`、`grid-auto-flow`这六个属性的合并简写形式。
+
+### 项目属性
+
+1. grid-column-start | grid-column-end | grid-row-start | grid-row-end
+
+   - 用于指定项目的四个边框，分别定位在哪根网格线。
+
+   - 可以用`span`关键字，表示跨越多少个网格。
+
+   - 使用这四个属性，如果项目产生了重叠，就使用 z-index 来指定项目的重叠顺序。
+
+     ```css
+     .item-1 {
+       grid-column-start: span 2;/* 跨越两列 */
+     }
+     ```
+
+2. grid-column | grid-row
+
+   - 是上面属性的合并简写
+
+     ```css
+     .item-1 {
+       grid-column: 1 / 3;
+       grid-row: 1 / 2;
+     }
+     /* 等同于 */
+     .item-1 {
+       grid-column-start: 1;
+       grid-column-end: 3;
+       grid-row-start: 1;
+       grid-row-end: 2;
+     }
+     ```
+
+3. grid-area：用于指定项目放在哪个区域，或前四种属性的简写，直接指定项目的位置。
+
+4. justify-self | align-self | place-self
+
+   - 用于设置单元格内容的位置，只作用于单个项目。
 
 **优点**：代码量少，简洁
 
 **缺点**：兼容性不是很好，一些浏览器不支持
-
-```css
-.container {
-    display: grid;
-    width: 100%;
-    grid-template-rows: 100px;
-    grid-template-columns: 300px auto 300px;
-}
-.left{
-    background: red;
-}
-.center{
-    background: yellow;
-}
-.right{
-    background: blue;
-}
-```
-
-```html
-<div class="container">       
-    <div class="left">左</div>
-    <div class="center">中</div>
-    <div class="right">右</div>
-</div>
-```
 
 ## 水平垂直居中
 
