--- a/日志/202204.md
+++ b/日志/202204.md
@@ -1,3 +1,7 @@
+## 4.20-2.22
+
+居然中间隔了两天没写，emmm...昨天收到字节的面试邀请，好紧张我已经开始焦虑了😭，这两天没头没脑的不知道复习了什么，先搞定项目吧，可以项目当时遇到的问题给忘掉了，没有记录下来！！！要养成记录的好习惯，这些琐细的点写在日志里也是个参考的依据呀呜呜呜呜🙊，哦差点忘了后天晚上的腾讯笔试，赶一块了，还是面试的压力大些，relax~🍝
+
 ## 4.19
 
 看着昨天的日志，感觉一天过的好快，明天五点多就要爬起来做核酸，其实说不上开心不开心，明天早起希望能有精神写算法吧。
