--- a/CSS/基本布局.md
+++ b/CSS/基本布局.md
@@ -731,3 +731,99 @@ float布局仍然是当前用的比较多的一种布局方式。可以应用BFC
 2. 圣杯使用padding+margin-left+relative；而双飞翼使用margin+margin-left即可
 
 注意：由于双飞翼布局会一直随着浏览器可视区域宽度减小从而不断挤压中间部分宽度。 所以需要设置给页面一个`min-width > LeftWidth + RightWidth`。
+
+## 使用css实现三角形
+
+1. 盒子宽高为0，设置`border`
+
+   ```css
+   div{
+     width: 0;
+     border-bottom: 100px solid skyblue;
+     border-left: 100px solid transparent;
+     border-right: 100px solid transparent;
+   }
+   ```
+
+2. 使用线性渐变属性`linear-gradient`，设置其中一个为透明即可，可以搭配transform为rotate来旋转角度
+
+   ```css
+   div{
+     width: 100px;
+     height: 100px;
+     background: linear-gradient(45deg, pink, pink 50%, skyblue 50%, skyblue 100%);
+     transform: rotate(-45deg);
+   }
+   ```
+
+3. 使用角向渐变`conic-gradient`，设置圆心点为容器最上方的中间，再进行角向渐变，一定角度范围内显示的是三角形。
+
+   ![img](https://s2.loli.net/2022/04/23/JhVrobH1uEi78ZQ.gif)
+
+   ```css
+   div {
+     width: 200px;
+     height: 100px;
+     background: conic-gradient(from 90deg at 50% 0, deeppink 0, deeppink 45deg, transparent 45.1deg);
+     /* 上述代码中的  deeppink 45deg, transparent 45.1deg 多出来的 0.1deg 是为了简单消除渐变产生的锯齿的影响 */
+   }
+   ```
+
+4. 使用 `transform: rotate` 配合 `overflow: hidden`。
+
+   ![img](https://s2.loli.net/2022/04/23/o3w5G2Q4UBR9YDZ.gif)
+
+   ```css
+   div {
+     width: 200px;
+     height: 100px;
+     position: relative;
+     overflow: hidden;
+   }
+   div::before {
+     content: " ";
+     position: absolute;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     background-color: skyblue;
+     /* 设置旋转中心为左下角 */
+     transform-origin: left bottom;
+     transform: rotate(45deg);
+   }
+   ```
+
+5. 使用`clip-path`属性将一个容器裁剪成想要的样子，其属性值就是坐标点。
+
+   ```css
+   div{
+     width: 100px;
+     height: 100px;
+     background-color: deeppink;
+     clip-path: polygon(50% 0, 0 100%, 100% 100%, 50% 0);
+   }
+   ```
+
+6. 利用字符串表示三角形，使用三角形字符的十进制Unicode标识码。
+
+   ```html
+   ◄ : &#9668; 
+   ► : &#9658; 
+   ▼ : &#9660; 
+   ▲ : &#9650;
+   ⊿ : &#8895;
+   △ : &#9651;
+   
+   <div>
+     &#9650;
+   </div>
+   <style>
+     div {
+       font-size:100px;
+       color: pink;
+     }
+   </style>
+   ```
+
+   
