--- a/日志/202204.md
+++ b/日志/202204.md
@@ -1,3 +1,21 @@
+## 4.23
+
+明天要腾讯笔试，这几天都没好好刷题，不过还是有点期待，看看明天能做出多少题，二叉树，数组，链表的题应该可以做大部分？动态规划看了一下解题大致流程：找出最优子结构，构造状态转移方程，使用DP数组优化...怀疑明天会被虐🤡。
+
+今天看了使用css实现三角形的6种方式，border、linear-gradient、conic-gradient、transform+hidden、clip-path、字符编码。
+
+还看了Symbol：
+
+- 用来表示唯一的值，它的引入主要是解决对象属性命名冲突的问题
+- 使用Symbol函数创建唯一的Symbol值，不能使用new操作符，且不能自动转化为字符串
+- 对象的Symbol属性可以使用Object.hasOwnPropertySymbols()或Reflect.ownKeys()来获取
+- Symbol.for()全局搜索被登记的Symbol中是否有该字符串参数作为名称的Symbol值，如果有则返回该值，若没有则新建并返回一个以该字符串参数为名称的Symbol值，并登记在全局环境中供搜索
+- Symbol.keyFor(参数为Symbol变量) 返回一个已登记的 Symbol 类型值的 key ，用来检测该字符串参数作为名称的 Symbol 值是否已被登记
+- ES6还提供了11个内置的Symbol值...
+- 使用场景：定义类的私有属性/方法；注册和获取全局Symbol，如页面中使用了iframe，Symbol.for()可以在所有这些window环境下保持一个共享的Symbol
+
+今天就看了这么点...痛心疾首😶
+
 ## 4.20-2.22
 
 居然中间隔了两天没写，emmm...昨天收到字节的面试邀请，好紧张我已经开始焦虑了😭，这两天没头没脑的不知道复习了什么，先搞定项目吧，可以项目当时遇到的问题给忘掉了，没有记录下来！！！要养成记录的好习惯，这些琐细的点写在日志里也是个参考的依据呀呜呜呜呜🙊，哦差点忘了后天晚上的腾讯笔试，赶一块了，还是面试的压力大些，relax~🍝
