update ES6 和 腾讯笔试

--- a/日志/202204.md
+++ b/日志/202204.md
@@ -1,3 +1,11 @@
+## 4.24
+
+今天白天看了Map、Set、Proxy、Reflect，Map可以用来存储数据，Set可以用来数组去重。每个可以被Proxy捕获的内部方法，在Reflect都有对应的方法，其名称和参数与Proxy的钩子相同，这样在Proxy中拦截对应操作时，可以使用Reflect.< method >完成原有的 method 操作，也就是说proxy可以在原有操作（用Reflect完成）的基础上加一些其他操作。
+
+晚上腾讯笔试，sad，两道0%，一道15%，一道100%，一道83.3%，只做出了扁平化数组的题，用的是扩展运算符加递归，忘记用flat API了👺。
+
+今天写的太长了，就不展开讲笔试了，emmm，一道环形链表题没写出来，其他的也不算很正规的算法题？？🤡链表题没写出来，没有脸了呜呜呜，还是太菜了🙁
+
 ## 4.23
 
 明天要腾讯笔试，这几天都没好好刷题，不过还是有点期待，看看明天能做出多少题，二叉树，数组，链表的题应该可以做大部分？动态规划看了一下解题大致流程：找出最优子结构，构造状态转移方程，使用DP数组优化...怀疑明天会被虐🤡。
@@ -18,7 +26,7 @@
 
 ## 4.20-2.22
 
-居然中间隔了两天没写，emmm...昨天收到字节的面试邀请，好紧张我已经开始焦虑了😭，这两天没头没脑的不知道复习了什么，先搞定项目吧，可以项目当时遇到的问题给忘掉了，没有记录下来！！！要养成记录的好习惯，这些琐细的点写在日志里也是个参考的依据呀呜呜呜呜🙊，哦差点忘了后天晚上的腾讯笔试，赶一块了，还是面试的压力大些，relax~🍝
+居然中间隔了两天没写，emmm...昨天收到字节的面试邀请，好紧张我已经开始焦虑了😭，这两天没头没脑的不知道复习了什么，先搞定项目吧，可是项目当时遇到的问题给忘掉了，没有记录下来！！！要养成记录的好习惯，这些琐细的点写在日志里也是个参考的依据呀呜呜呜呜🙊，哦差点忘了后天晚上的腾讯笔试，赶一块了，还是面试的压力大些，relax~🍝
 
 ## 4.19
 
@@ -40,7 +48,7 @@
 
 ## 4.16
 
-上次写日志还是在去年，自己是最了解自己的，总得找点方法逼一逼自己，那就写日志每天update一下吧🤪。有些细小的收获凑一篇博客的子树是不够的，也就是心里的一点所想，又不想用又臭又长的无序列表来放在一个文件里，无头无脑，烦人的很，不如记录在每天的日志中，学习了什么，收获了什么，与日志最配的就是可爱的小表情啦😝
+上次写日志还是在去年，自己是最了解自己的，总得找点方法逼一逼自己，那就写日志每天update一下吧🤪。有些细小的收获凑一篇博客的字数是不够的，也就是心里的一点所想，又不想用又臭又长的无序列表来放在一个文件里，无头无脑，烦人的很，不如记录在每天的日志中，学习了什么，收获了什么，与日志最配的就是可爱的小表情啦😝
 
 今天同学问了一道节流题为啥要用闭包的特性，去翻了下闭包的定义，毕竟被这个问题困扰很久了，究竟是要return了内部函数算数呢，还是只要在函数中定义了内部函数就算？希望来个面试官现场指导...MDN原话：当内部函数以某一种方式被任何一个外部函数作用域访问时，一个闭包就产生了。所以**闭包应该就是在定义这个函数的词法作用域外还能被调用的函数**（属于前者）。
 
