--- a/JavaScript/手写实现及概念原理.md
+++ b/JavaScript/手写实现及概念原理.md
@@ -349,7 +349,7 @@ console.log(a()()())
 1. 即使创建它的上下文已经销毁，它仍然存在（比如，内部函数从父函数中返回）
 2. 在代码中引用了自由变量
 
-简单来说就是，闭包就是**在定义这个函数的词法作用域外还能被调用的函数**。闭包在函数创建时创建。
+简单来说就是，闭包就是**有权访问另一个函数作用域变量的函数**，return出去只是一种表现形式。闭包在函数创建时创建。
 
 ```javascript
 var scope = "global scope";
