--- a/日志/202204.md
+++ b/日志/202204.md
@@ -2,7 +2,7 @@
 
 前几天有些烦躁，摸鱼去了...凌晨还在赶面经，这次面试说实话挺幸运的，幸运的不是面试官问了八股文，而是问的八股文中我大部分在这两天都看了，面试官话不多，但是没有感觉到压迫感，难道是因为我脸皮变厚了😕。面试快开始的时候真的是好紧张，感觉心都要跳出来了，面试官是最后一分钟左右进来的，就差不多开始面试，还好自我介绍比较流畅，一上来也没有直接问我项目，而是问我组长要干什么，我自认为这方面还是能自由发挥好的hhhh🍱，这确实让我放松了很多，也是之前选工作室boss带给我的信心，感谢当时学长学姐对我的认可和鼓励🥦🍇🥭🥝。
 
-期间有几个问题答错了，那个cookie、this指向什么的，后来面试官打算给我出promise的题，感觉像是手撕promise，sad...先缴械投降🍟，后面面试官问我promise不熟？灵魂拷问，好害怕...后面换成一道删除链表倒数第k个值，假装思考了一下，七分钟写出来了，整体感觉还不错，今天运气可以说是很好了🍻
+期间有几个问题答错了，那个cookie、this指向什么的，后来面试官打算给我出promise的题，感觉像是手撕promise，sad...先缴械投降🍟，后面面试官问我promise不熟？灵魂拷问，好害怕...后面换成一道删除链表倒数第k个节点，可以使用双指针解决，七分钟写出来了，整体感觉还不错，今天运气可以说是很好了🍻
 
 ## 4.24
 
