--- a/日志/202204.md
+++ b/日志/202204.md
@@ -1,3 +1,7 @@
+## 4.29-4.30
+
+有点自我感觉良好，开始摸鱼...🤡
+
 ## 4.25-4.28
 
 前几天有些烦躁，摸鱼去了...凌晨还在赶面经，这次面试说实话挺幸运的，幸运的不是面试官问了八股文，而是问的八股文中我大部分在这两天都看了，面试官话不多，但是没有感觉到压迫感，难道是因为我脸皮变厚了😕。面试快开始的时候真的是好紧张，感觉心都要跳出来了，面试官是最后一分钟左右进来的，就差不多开始面试，还好自我介绍比较流畅，一上来也没有直接问我项目，而是问我组长要干什么，我自认为这方面还是能自由发挥好的hhhh🍱，这确实让我放松了很多，也是之前选工作室boss带给我的信心，感谢当时学长学姐对我的认可和鼓励🥦🍇🥭🥝。
