--- a/面经集合/字节-商业化/一面（4.28）.md
+++ b/面经集合/字节-商业化/一面（4.28）.md
@@ -1,4 +1,4 @@
-> 面试官话说的不多，但是没有压迫感，感觉面试整体状态还可以，但是有些点答错了，后面声音有点小
+> 面试官话说的不多，但是没有压迫感，感觉面试整体状态还可以，但是有些点答错了，后面自己回答的声音有点小
 
 1. 自我介绍（介绍了自己担任学校的一个web开发工作室前端组长）
 
