--- a/日志/202205.md
+++ b/日志/202205.md
@@ -1,3 +1,9 @@
+## 5.6
+
+看了下美团明天有笔试，那就明天投美团、京东、拼多多。今天感觉学习的状态不是很好，下午因为做核酸、拿快递、搬水、跳绳，一下午也没学到什么，早上做了一道动归的题，下午和晚上看了一下ES6的模块和CommonJS，有了大致的了解，有点犯困...😪快来个面试治治我吧🍓🍍🥭🥒
+
+
+
 ## 5.1-5.5
 
 不知道哪来的自信，居然给自己放了7天假？？？😅怕是安逸惯了吧，呜呜呜，最近非常过分，自己要好好反省，没有直观的压力就没有动力，马上6月就要陆陆续续开放提前批了，再不动起来真的是要吃土了，小姜同志快醒醒！！！！😱😱😱
