--- a/日志/202205.md
+++ b/日志/202205.md
@@ -1,3 +1,11 @@
+## 5.7-5.13
+
+怎会如此，我居然又又又隔了一周没写日志...😶明天有两场笔试，原本想让美团的顺延到下一周，但是双周的笔试时间是下午4点，而5点20要去下寝，我好sad，要是这次不能按期转为正式党员，那真真是血亏了呜呜呜😢
+
+这两天刷了回溯题，感觉好像都一个套路，但是那个全排列II还是有点不理解...希望明天的笔试我能进步一些，晚安小宝贝🌱
+
+小表情真的好可爱好好看~🌎🌍🌏
+
 ## 5.6
 
 看了下美团明天有笔试，那就明天投美团、京东、拼多多。今天感觉学习的状态不是很好，下午因为做核酸、拿快递、搬水、跳绳，一下午也没学到什么，早上做了一道动归的题，下午和晚上看了一下ES6的模块和CommonJS，有了大致的了解，有点犯困...😪快来个面试治治我吧🍓🍍🥭🥒
