--- a/日志/202205.md
+++ b/日志/202205.md
@@ -1,3 +1,9 @@
+### 5.14
+
+差点又忘写日志了，今天啥也没干，就参加了两场笔试，有点离谱，每场笔试2道编程，每场都只ac了一道，不过京东的第一道用了回溯，虽然没有ac，但是能按回溯的思路写出来就还是有些收获。美团的第二道用动态规划写出来了，也是一个想不到的收获，虽然貌似挺简单的🤡。
+
+最近练得算法题还算有些收获，but前端的笔试很多都是选择+编程的形式，选择题考的偏了还是个定时炸弹，还是得考做题积累，算法题继续刷刷刷🌱
+
 ## 5.7-5.13
 
 怎会如此，我居然又又又隔了一周没写日志...😶明天有两场笔试，原本想让美团的顺延到下一周，但是双周的笔试时间是下午4点，而5点20要去下寝，我好sad，要是这次不能按期转为正式党员，那真真是血亏了呜呜呜😢
