--- a/日志/202205.md
+++ b/日志/202205.md
@@ -1,4 +1,10 @@
-### 5.14
+## 5.15
+
+今天有点飘，做完核酸回来补觉，玩了一下午，晚上看了一个Vue最佳实践的视频，理清了一点东西，比如数据缓存、插件和Vue一些API的使用🌱
+
+
+
+## 5.14
 
 差点又忘写日志了，今天啥也没干，就参加了两场笔试，有点离谱，每场笔试2道编程，每场都只ac了一道，不过京东的第一道用了回溯，虽然没有ac，但是能按回溯的思路写出来就还是有些收获。美团的第二道用动态规划写出来了，也是一个想不到的收获，虽然貌似挺简单的🤡。
 
