--- a/日志/202205.md
+++ b/日志/202205.md
@@ -1,8 +1,10 @@
+## 5.16-5.19
+
+前两天就有电话通知说联想要面试，当时还挺惊讶的，毕竟这是第一个行测通过的公司了，今天下午两点参加的一面，感觉问的不难，前面计网和基础答的还可以，后期问到promise和vue就开始崩盘了，啥都忘记了。感觉之前面字节失败可能是因为虽然很多都答出来了，但是有一些细节答错了，导致面试给挂了。傍晚hr说拿到了offer，base在天津🥦
+
 ## 5.15
 
 今天有点飘，做完核酸回来补觉，玩了一下午，晚上看了一个Vue最佳实践的视频，理清了一点东西，比如数据缓存、插件和Vue一些API的使用🌱
-
-
 
 ## 5.14
 
