--- a/日志/20220506.md
+++ b/日志/20220506.md
@@ -1,6 +1,20 @@
+## 6.28
+
+今日份学习，早上在学qiankun，一个微前端框架，好奇它原本的含义是不是“乾坤”哈哈哈，中途了解了i18n（国际化）、umd（通用模块定义规范，集CMD、AMD、CommonJS于一体）、混入（css和vue中的混入，其实都是抽出一些可复用的东西）等概念，下午在看项目目录，理解项目的大概架构...看了两道算法题，不连续刷手感就消失了，虽然可能原本就没什么手感🤡
+
+天津有疫情了，四个确诊，还是在我们区...上班开门红😶
+
+## 6.27
+
+今天拿到项目npm install的时候，发现一直报错说找不到包，但是按照它的package-lock.js给的地址是能够找到的，折腾了好久，发现是镜像的问题，要切换成公司内部镜像，应该是不同镜像对应了不同的库，在npm库中找不到所以才报错的😭
+
+## 5.20-6.26
+
+拿到offer后有点放飞自我了...
+
 ## 5.16-5.19
 
-前两天就有电话通知说联想要面试，当时还挺惊讶的，毕竟这是第一个行测通过的公司了，今天下午两点参加的一面，感觉问的不难，前面计网和基础答的还可以，后期问到promise和vue就开始崩盘了，啥都忘记了。感觉之前面字节失败可能是因为虽然很多都答出来了，但是有一些细节答错了，导致面试给挂了。傍晚hr说拿到了offer，base在天津🥦
+前两天就有电话通知说联想要面试，当时还挺惊讶的，毕竟这是第一个行测通过的公司了，今天下午两点参加的一面，感觉问的不难，前面基础答的还可以，后期问到promise和vue就开始崩盘了，啥都忘记了。感觉之前面字节失败可能是因为虽然很多都答出来了，但是有一些细节答错了，导致面试给挂了。傍晚hr说拿到了offer，base在天津🥦
 
 ## 5.15
 
@@ -10,7 +24,7 @@
 
 差点又忘写日志了，今天啥也没干，就参加了两场笔试，有点离谱，每场笔试2道编程，每场都只ac了一道，不过京东的第一道用了回溯，虽然没有ac，但是能按回溯的思路写出来就还是有些收获。美团的第二道用动态规划写出来了，也是一个想不到的收获，虽然貌似挺简单的🤡。
 
-最近练得算法题还算有些收获，but前端的笔试很多都是选择+编程的形式，选择题考的偏了还是个定时炸弹，还是得考做题积累，算法题继续刷刷刷🌱
+最近练得算法题还算有些收获，but前端的笔试很多都是选择+编程的形式，选择题考的偏了还是个定时炸弹，还是得靠做题积累，算法题继续刷刷刷🌱
 
 ## 5.7-5.13
 
