--- a/日志/20220506.md
+++ b/日志/20220506.md
@@ -1,3 +1,13 @@
+## 6.29
+
+不记下来就要忘掉了...
+
+今日份学习，理解项目结构，可以把项目一些公用方法可以抽出来分类，放在utils文件里面，比如全局常量，公共文件或者工具类文件；中午前给了个小任务，主要是要找到在哪修改代码，因为整个项目结构真的挺大的；下午看了下B站，准备重学一下vue，我觉得有深度比有广度好一些，在学有小成的时候再去学点其他东西。
+
+key的原理：key是虚拟DOM的标识，当v-for的key的值为index或者不设置key的时候，如果要打乱数据顺序可能会出现一些问题，且效率低，因为比对时要不断生成新的真实DOM，不能复用；而使用唯一标识作为key值时，对比新旧虚拟DOM时，只要生成更改key的真实DOM就好了
+
+今天据说有9例确诊了🙉
+
 ## 6.28
 
 今日份学习，早上在学qiankun，一个微前端框架，好奇它原本的含义是不是“乾坤”哈哈哈，中途了解了i18n（国际化）、umd（通用模块定义规范，集CMD、AMD、CommonJS于一体）、混入（css和vue中的混入，其实都是抽出一些可复用的东西）等概念，下午在看项目目录，理解项目的大概架构...看了两道算法题，不连续刷手感就消失了，虽然可能原本就没什么手感🤡
