--- a/日志/20220506.md
+++ b/日志/20220506.md
@@ -1,3 +1,9 @@
+## 6.30
+
+啊这...又忘记写日志了，补回来🤡
+
+早上看了下项目的mock目录，如何在项目中模拟数据，然后中午分配了一个统计的工作，搞完之后有点无聊，去刷了几道题，感觉有点迷迷糊糊的，没有静下心来，这样是要挨打的啊啊啊🙊晚上终于接到了第一个页面任务，不过是页面重构，明天开搞
+
 ## 6.29
 
 不记下来就要忘掉了...
