--- a/性能优化/指标及常见方式.md
+++ b/性能优化/指标及常见方式.md
@@ -5,4 +5,28 @@
 - 白屏时间FP(First Paint)：
 - 首屏时间FCP(First ContentFul Paint)：页面从开始加载到页面内容的任何部分在屏幕上完成渲染的时间，其中“内容”指文本、图像、`<svg>`元素或`<canvas>`元素。
 
-![网络请求时序图。 从左到右的阶段是重定向（与卸载提示重叠）、缓存、DNS、TCP、请求、响应、处理和加载。 相关的时序是 redirectStart 和 redirectEnd（与 Prompt for Unload 的 unloadEventStart 和 unloadEventEnd 重叠）、fetchStart、domainLookupStart、domainLookupEnd、connectStart、secureConnectionStart、connectEnd、requestStart、responseStart、responseEnd、domInteractive、domContentLoadedEventStart、domContentLoadedEventEnd、domComplete、loadEventStart 和 loadEventEnd .](https://s2.loli.net/2022/03/30/Y7kTAjEy5JWKoOi.png)
+## RUM 性能模型
+
+![image-20220714140701457](https://s2.loli.net/2022/07/14/yGckovrUtf5bd9u.png)
+
+
+
+网络请求时序图。 从左到右的阶段是重定向（与卸载提示重叠）、缓存、DNS、TCP、请求、响应、处理和加载。 
+
+
+
+## Performance
+
+![img](https://s2.loli.net/2022/07/14/s7kLgvMOReESQP9.png)
+
+### 概览面板
+
+有4个关键指标：
+
+1. 页面帧速（FPS）：如果 FPS 图表上出现了红色块，那么就表示红色块附近渲染出一帧所需时间过久，帧的渲染时间过久，就有可能导致页面卡顿。
+2. CPU资源消耗：如果 CPU 图形占用面积太大，表示 CPU 使用率就越高，那么就有可能因为某个 JavaScript 占用太多的主线程时间，从而影响其他任务的执行。
+3. 网络请求流量
+4. V8内存使用量（堆内存）：如果 V8 的内存使用量一直在增加，就有可能是某种原因导致了内存泄漏。
+
+除了以上指标以外，概览面板还展示加载过程中的几个关键时间节点，如 FP、LCP、DOMContentLoaded、Onload 等事件产生的时间点。这些关键时间点体现在了几条不同颜色的竖线上。
+
